cmake_minimum_required(VERSION 3.10 FATAL_ERROR)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
include_directories(/usr/local/include)
link_directories(/usr/local/lib)
set(HELIB_DIR "$ENV{HOME}/workspace/helib_install/helib-1.1.0/helib_pack")
include_directories(${HELIB_DIR}/include)
link_directories(${HELIB_DIR}/lib)
find_package(helib)
# add_executable(helib_attack helib_attack.cpp helib_utils.cpp ntl_utils.cpp eval.cpp)
add_executable(my-helib-attack my-helib-attack.cpp helib_utils.cpp ntl_utils.cpp eval.cpp)
# target_link_libraries(helib_attack helib ntl gmp pthread)
target_link_libraries(my-helib-attack helib ntl gf2x gmp pthread)
